--- a/views/configuracoes.hbs
+++ b/views/configuracoes.hbs
@@ -62,7 +62,7 @@
         <div>
             <div class="text_but" >
 
-            {{nome}}
+            <h3>{{nome}}</h3> 
     
              <button class="acima" type="button">Mudar foto</button>
            </div>
@@ -114,7 +114,7 @@
             </div>
                 <p>Copyright © 2022 Glub. All rights reserved.</p>
            
-    </div>
+        </div>
     </footer>
 
     </body>
