--- a/views/gps.hbs
+++ b/views/gps.hbs
@@ -20,12 +20,12 @@
 <body>
 
 <header>
-    <a href="/Programação/Visao Usuario/Guilherme/feed/feed.html">
+    <a href="/feed">
     <img src="/Imagens/Icones/Voltar.svg" alt="voltar"> 
 </a>
 
     <div class="usuario-container">
-        <a href="/Programação/Visao Usuario/Isabela/mensagem/mensagem.html">
+        <a href="/chat">
                 <img src="/Imagens/Icones/Mensagem.svg" alt="mensagem">
             </a>
             
@@ -38,11 +38,11 @@
                 <img src="/Imagens/avatar feminino.jpg" alt="avatar">
             </button>
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton1">
-              <li><a class="dropdown-item" href="/Programação/Visao Usuario/Isabelly/perfil/perfil.html">Perfil</a></li>
+              <li><a class="dropdown-item" href="/perfil">Perfil</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="/Programação/Visao Usuario/Bruna/configuração/configuração.html">Configurações</a></li>
+              <li><a class="dropdown-item" href="/configuracoes">Configurações</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="/Programação/Visao Usuario/Guilherme/home/home.html">Sair</a></li>
+              <li><a class="dropdown-item" href="/sair">Sair</a></li>
             </ul>
           </div>
         </div>
@@ -50,16 +50,15 @@
 
 <div class="titulo">
     <div class="titulo1">
-        <h3> Dia de recolhimento: </h3>
+        <h3> Dia de recolhimento: 05/12/2022</h3>
     </div>
 
     <div class="titulo2">
-        <h3> Horário de recolhimento: </h3>
+        <h3> Horário de recolhimento: 9:30 </h3>
     </div>
 </div>
-<div class="gps">
-    <a href="" target="_self" > GPS </a>
-</div>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3700.89462711588!2d-50.52929278490511!3d-21.938602009554923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9495b7e39ba13817%3A0xf46b63b9addcc184!2sETEC%20Prof.%20Massuyuki%20Kawano!5e0!3m2!1sen!2sbr!4v1669816166243!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" 
 
 
 </body>
