--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -16,12 +16,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/chat/responsivo.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <body>
 
   <header> 
 
     <div class="logo">
-        <img src="/Imagens/logo-redonda.png" alt="">
+      <a href="/feed">
+          <img src="/Imagens/logo-redonda.png" alt="">
+      </a>
     </div>
 
     <div class="perfil-icones">
@@ -32,18 +36,19 @@
             </a>
         </div>
         
-        <a href="/Programação/Visao Usuario/Isabela/mensagem/mensagem.html"> <img src="/Imagens/Icones/Mensagem.svg" alt="Mensagem"></a>
-        <a href="/Programação/Visao Usuario/Isabela/gps/gps.html"> <img src="/Imagens/Icones/GPS.svg" alt="GPS"></a>
+        <a href="/chat"> <img src="/Imagens/Icones/Mensagem.svg" alt="Mensagem"></a>
+        <a href="/gps"> <img src="/Imagens/Icones/GPS.svg" alt="GPS"></a>
+
         <div class="dropdown">
             <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                 <img src="/Imagens/avatar feminino.jpg" alt="avatar">
             </button>
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton1">
-              <li><a class="dropdown-item" href="/Programação/Visao Usuario/Isabelly/perfil/perfil.html">Perfil</a></li>
+              <li><a class="dropdown-item" href="/perfil">Perfil</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="/Programação/Visao Usuario/Bruna/configuração/configuração.html">Configurações</a></li>
+              <li><a class="dropdown-item" href="/configuracoes">Configurações</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="/Programação/Visao Usuario/Guilherme/home/home.html">Sair</a></li>
+              <li><a class="dropdown-item" href="/sair">Sair</a></li>
             </ul>
           </div>
     </div>
