--- a/public/noticia/style.css
+++ b/public/noticia/style.css
@@ -104,9 +104,11 @@ section .titulo h2{
     font-size: 60px;
     line-height: 73px;
     display: flex;
-    align-items: center;
-    justify-content: center;
     color: #000000;
+}
+
+section img{
+    border-radius: 20px;
 }
 
 .img_noticia{
@@ -131,7 +133,7 @@ section .titulo h2{
 .comentarios{
     margin-left: 70px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 form{
@@ -161,7 +163,14 @@ input{
     background: #D9D9D9;
     border-radius: 20px;
     padding: 16px;
-    border: 0
+    border: 0;
+    margin-left: 10px;
+}
+
+.enviar input{
+    width: 100px;
+    margin-top: 12px;
+    margin-left: 700px;
 }
 
 input ::placeholder{
@@ -180,19 +189,22 @@ input ::placeholder{
     border: none
 }
 
-.enviar{
-    background: #D9D9D9;
-    border-radius: 20px;
-    width: 111px;
-    height: 32px;
-    border: none
-}
-
 .comentario{
     margin-top: 22px;
     margin-left: 232px;
-    width: 781px;
-    height: 239px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.comentario img{
+    width: 62px;
+    height: 62px;
+}
+
+.comentario p{
+    margin-left: 10px;
+    font-size: 20px;
 }
 
 .nome_data{
@@ -250,6 +262,17 @@ input ::placeholder{
     display: flex;
     align-items: center;
     color: rgba(0, 0, 0, 0.69);
+}
+
+.comentario-texto{
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+}
+.use-comentario{
+    background-color: #D9D9D9;
+    padding: 20px;
+    border-radius: 20px;
 }
 
 .img_prefe{
