--- a/public/noticia/style.css
+++ b/public/noticia/style.css
@@ -128,6 +128,7 @@ section img{
     font-size: 30px;
     line-height: 36px;
     margin-top: 50px;
+    width: 70%;
 }
 
 .comentarios{
@@ -273,6 +274,7 @@ input ::placeholder{
     background-color: #D9D9D9;
     padding: 20px;
     border-radius: 20px;
+    width: 50%;
 }
 
 .img_prefe{
