mudancas front end

--- a/views/noticia.hbs
+++ b/views/noticia.hbs
@@ -85,7 +85,7 @@
 
         {{#each comentarios}}
         <div class="comentario">
-            <img src="/Imagens/avatrar vilmar gongas.png" alt="">   
+            <img src="/Imagens/imagem.feminina.redonda.png" alt="">   
             <div class="comentario-texto">
                 <h3>{{use_nome}}</h3> 
                 <div class="use-comentario">
