--- a/public/perfil/style.css
+++ b/public/perfil/style.css
@@ -121,22 +121,10 @@ a{
     padding-right: 242px;
 }
 
-.comentarios img[src="/Imagens/avatar feminino.jpg"]{
-    width: 75px;
-    height: 75px;
-    border-radius: 20px;
-}
-
-img[src="/Imagens/imagem.feminina.redonda.png"]{
-    padding-right: 21px;
-    padding-top: 61px;
-  
-}
 
 .comentarios{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    
     flex-direction: column;
     background: #E5E5E5;
     border-radius: 20px;
@@ -147,6 +135,44 @@ img[src="/Imagens/imagem.feminina.redonda.png"]{
     padding-left: 183px;
     padding-right: 131px;
     
+    }
+
+    .comentarios img{
+        width: 75px;
+        height: 75px;
+        
+        }
+
+    .comentarios-texto{
+        display: flex;
+        flex-direction: column;
+        margin-left: 20px;
+        margin-top: 50px;
+    
+    }
+
+    .use-comentario{
+        background: #D9D9D9;
+        padding: 20px;
+        border-radius: 20px;
+    }
+
+    .comentarios-texto h3{
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 30px;
+    
+        color: rgba(0, 0, 0, 0.69);
+    }
+
+    .comentarios-texto p{
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+    
+        color: rgba(0, 0, 0, 0.69);
     }
 
 .comentarios .topo{
@@ -196,22 +222,9 @@ img[src="/Imagens/imagem.feminina.redonda.png"]{
 }
 
 .comentario{
-    width: 845px;
-    height: 149px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
-    color: rgba(0, 0, 0, 0.69);
-    background: #D9D9D9;
-    border-radius: 20px;
-    padding-bottom: 16px;
-    padding-left: 24px;
-    padding-top: 16px;
-    margin-left: 131px;
+   display: flex;
+   flex-direction: row;
+   align-items: center;
 
 }
 
