--- a/public/noticia/style.css
+++ b/public/noticia/style.css
@@ -275,7 +275,7 @@ input ::placeholder{
     background-color: #D9D9D9;
     padding: 20px;
     border-radius: 20px;
-    width: 50%;
+    width: 700px;
 }
 
 .img_prefe{
