--- a/public/home/style.css
+++ b/public/home/style.css
@@ -21,6 +21,7 @@ body{
     display: flex;
     justify-content: center;
     font-size: 30px;
+    margin-bottom: 50px;
 }
 
 header .container-box{
